fix(context): removed unnecessary overflow

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   background-color: white;
   box-shadow: 2px 2px 50px rgb(206, 204, 204);
-  overflow: scroll;
+  overflow-y: scroll;
   transform: translate(-100%);
   transition: all 0.5s ease;
   opacity: 0;
@@ -19,12 +19,13 @@
 .library-song-container {
   display: flex;
   align-items: center;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 1rem 2rem;
   cursor: pointer;
   transition: background 0.5s ease;
   img {
     height: 4rem;
     width: 4rem;
+    border-radius: 4px;
   }
   &:hover {
     background-color: rgb(222, 222, 255);
